Modification of config and remove index.html

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "Un peu de Photographie, un peu d'informatique, beaucoup d'autres c
 
 # This URL is the main adresse. Don't include a slash at the end.
 #
-url: "https://brice.github.io/feeling-responsive"
+url: "https://brice.github.io/"
 baseurl: ""
 
 # This is for the editing function in _/includes/improve_content.html
