--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,24 +1,24 @@
-info_website: "About This Site"
+info_website: "A propos de ce site"
 archive: "Archive"
-blog_archive: "Blog Archive"
+blog_archive: "Archive du blog"
 blog: "Blog"
 comments_headline: "Dialogue &amp; Discussion"
 more: "More ›"
-more_articles: "More Articles"
+more_articles: "Plus d'articles"
 navigation_title: "Navigation"
 new_blog_entries: "New Blog Articles"
-next: "Next"
-next_posts: "Next Posts"
-previous: "Previous"
-previous_posts: "Previous Posts"
-read: "Read"
-read_more: "Read More&nbsp;›"
-if_you_are_not_redirected_automatically: "If you are not redirected automatically,"
-click_here: "click here"
-next_post_in: "Next Post in"
-previous_post_in: "Previous Post in"
-breadcrumb_start: "Start"
-edit: "Edit"
-this_content_is_open_source: "This content is open source."
-help_improve_it: "Help improve it"
+next: "Suivant"
+next_posts: "Billets suivants"
+previous: "Précédent"
+previous_posts: "Billets précédent"
+read: "Lire"
+read_more: "Lire plus&nbsp;›"
+if_you_are_not_redirected_automatically: "Si vous n'êtes pas redirigé automatiquement,"
+click_here: "cliquez icii"
+next_post_in: "Prochain post dans"
+previous_post_in: "Précédent post dans"
+breadcrumb_start: "Début"
+edit: "Editer"
+this_content_is_open_source: "Ce contenu est open souce."
+help_improve_it: "Merci de l'aider à l'améliorer"
 enter_search_term: "Enter search term and hit enter"
