--- a/_data/services.yml
+++ b/_data/services.yml
@@ -8,9 +8,9 @@
 - name: "RSS"
   url: "/feed.xml"
   class: "rss-link"
-  title: "Subscribe to RSS"
+  title: "Flux RSS"
 
 - name: "sitemap.xml"
   url: "/sitemap.xml"
   class: "sitemap-link"
-  title: "Sitemap for Google Webmastertools"
+  title: "Sitemap pour Google Webmastertools"
