--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,39 +1,24 @@
-- name: YouTube
-  url: http://www.youtube.com/PhlowMedia
-  class: icon-youtube
-  title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
-
 - name: Twitter
-  url: http://twitter.com/phlow
+  url: http://twitter.com/bricef/
   class: icon-twitter
-  title: "Immer das Neuste von Phlow gibt es auf Twitter"
-
-- name: Facebook
-  url: http://www.facebook.com/phlow.media
-  class: icon-facebook
-  title: "Lass uns Freunde sein!"
-
-- name: Soundcloud
-  url: http://soundcloud.com/phlow
-  class: icon-soundcloud
-  title: "Sounds und Downloads und mehr"
+  title: "Liens, infos, échanges, tout ça sur twitter"
 
 - name: GitHub
-  url: http://github.com/phlow
+  url: http://github.com/brice/
   class: icon-github
-  title: Code und mehr...
+  title: Du code et ce site internet...
 
 - name: Instagram
-  url: http://instagram.com/phlowmedia
+  url: https://instagram.com/bricefoto/
   class: icon-instagram
-  title: "Bilder und Impressionen mit und ohne Filter..."
+  title: "Quand j'ai mon iphone sous la main"
 
 - name: Pinterest
   url: http://www.pinterest.com/phlowmedia/
   class: icon-pinterest
-  title: "Bilder, Fotos, Illustrationen, Grafiken sammeln..."
+  title: "Quelques sélections de photos pour inspiration"
 
-- name: Mixcloud
-  url: http://www.mixcloud.com/phlow/
-  class: icon-cloud
-  title: "Mixe, was sonst?"
+- name: Flickr
+  url: http://flickr.com/bricef
+  class: icon-flickr
+  title: "Mon porfolio contenant beaucoup d'essais"
