--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,10 @@
   - title: "Blog Archive"
     url: "/blog/archive/"
 
+- title: Portfolio
+  url: "/portfolio/"
+  side: left
+
 - title: "Search"
   url: "/search/"
   side: right
