--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,6 +4,6 @@
 # 2. Change author in default settings in config.yml
 #
 # Ressource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-your_author_name:
+bricef:
     name: "Brice Favre"
     url: http://brice.github.io/
