--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ defaults:
 #   ___/ / /___/ /_/ / 
 #  /____/_____/\____/    Verify Website to Webmaster Tools
 
-google_author:             "https://plus.google.com/u/1/+BriceFavre"
+# google_author:             "https://plus.google.com/u/1/+BriceFavre"
 # google_site_verification:  "Vk0IOJ2jwG_qEoG7fuEXYqv0m2rLa8P778Fi_GrsgEQ"
 # bing_webmastertools_id:    "0FB4C028ABCF07C908C54386ABD2D97F"
 # alexa_verify_id:         ""
@@ -151,11 +151,11 @@ msapplication_tilecolor:                "#fabb00"
 #    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<   
 #   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
 
-og_image:                           "http://images.phlow.de/phlow/phlow_de-logo-512x.png"
-og_locale:                          "bf_FR"
-og_type:                            "website"
-og_title:                           "PeLmeL – Un site par Brice F."
-og_description:                     "Un peu de Photographie, un peu d'informatique, beaucoup d'autres choses aussi. PeLMeL c'est une façon de partager tout moi."
+# og_image:                           "http://images.phlow.de/phlow/phlow_de-logo-512x.png"
+# og_locale:                          "bf_FR"
+# og_type:                            "website"
+# og_title:                           "PeLmeL – Un site par Brice F."
+# og_description:                     "Un peu de Photographie, un peu d'informatique, beaucoup d'autres choses aussi. PeLMeL c'est une façon de partager tout moi."
 # og_url:                           ""
 # og_site_name:                     ""
 
@@ -201,5 +201,7 @@ sass:
 #                        /____/                   
 #
 # used in _includes/footer_scripts.html
+# google_analytics_tracking_id: UA-364734-12
 
-google_analytics_tracking_id: UA-364734-12
+
+remote_theme: "jekyll/minima@1e8a445"
