--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,41 @@
 theme: minima
 
-# # ASCII-Font › http://patorjk.com/software/taag/#p=display&f=Slant&t=Phlow
-# #
-# #      _____ _ __          _____      __  __  _                 
-# #     / ___/(_) /____     / ___/___  / /_/ /_(_)___  ____ ______
-# #     \__ \/ / __/ _ \    \__ \/ _ \/ __/ __/ / __ \/ __ `/ ___/
-# #    ___/ / / /_/  __/   ___/ /  __/ /_/ /_/ / / / / /_/ (__  ) 
-# #   /____/_/\__/\___/   /____/\___/\__/\__/_/_/ /_/\__, /____/  
-# #                                                 /____/        
-# #
-# # Title of your website
-# title: "PeLmeL.org"
+# ASCII-Font › http://patorjk.com/software/taag/#p=display&f=Slant&t=Phlow
+#
+#      _____ _ __          _____      __  __  _                 
+#     / ___/(_) /____     / ___/___  / /_/ /_(_)___  ____ ______
+#     \__ \/ / __/ _ \    \__ \/ _ \/ __/ __/ / __ \/ __ `/ ___/
+#    ___/ / / /_/  __/   ___/ /  __/ /_/ /_/ / / / / /_/ (__  ) 
+#   /____/_/\__/\___/   /____/\___/\__/\__/_/_/ /_/\__, /____/  
+#                                                 /____/        
+#
+# Title of your website
+title: "PeLmeL.org"
 
 
-# # The slogan describes your website and is used on homepage in <title> and other important places
-# slogan: "Un peu de ci, un peu de ça, pelmel en tout"
+# The slogan describes your website and is used on homepage in <title> and other important places
+slogan: "Un peu de ci, un peu de ça, pelmel en tout"
 
 
-# # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-# description: "Un peu de Photographie, un peu d'informatique, beaucoup d'autres choses aussi. PeLMeL c'est une façon de partager tout moi"
+# The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
+description: "Un peu de Photographie, un peu d'informatique, beaucoup d'autres choses aussi. PeLMeL c'est une façon de partager tout moi"
 
-# # This URL is the main adresse. Don't include a slash at the end.
-# #
-# url: "https://brice.github.io"
-# baseurl: ""
+# This URL is the main adresse. Don't include a slash at the end.
+#
+url: "https://brice.github.io"
+baseurl: ""
 
-# # This is for the editing function in _/includes/improve_content.html
-# # Leave it empty if your site is not on GitHub/GitHub Pages
-# improve_content: https://github.com/brice/brice.github.io/edit/master
+# This is for the editing function in _/includes/improve_content.html
+# Leave it empty if your site is not on GitHub/GitHub Pages
+improve_content: https://github.com/brice/brice.github.io/edit/master
 
-# # This URL points directly to the images directory making
-# # things easier to link to images in posts and templates. It needs a slash.
-# #
-# # Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
-# # Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
-# #
-# urlimg: "http://brice.github.io/images"
+# This URL points directly to the images directory making
+# things easier to link to images in posts and templates. It needs a slash.
+#
+# Example: <img src="{{ site.urlimg }}/{{ post.image.title }}">
+# Markdown-Example for posts ![Image Text]({{ site.urlimg }}/image.jpg)
+#
+urlimg: "http://brice.github.io/images"
 
 
 # # Logo size is 600x80 pixels
@@ -43,31 +43,31 @@ theme: minima
 
 
 # # Paginates all X entries
-# paginate: 5
+paginate: 5
 
 
-# # Pagination path › Important for blog page in /blog/ to work
-# paginate_path: "blog/page:num"
+# Pagination path › Important for blog page in /blog/ to work
+paginate_path: "blog/page:num"
 
 
-# # Theme works best with Kramdown (using the table of contents function)
-# markdown: kramdown
-# permalink: /:categories/:title/
-# highlight: pygments
-# excerpt_separator: "\n\n"
-# exclude: []
-# include: ['.htaccess']
+# Theme works best with Kramdown (using the table of contents function)
+markdown: kramdown
+permalink: /:categories/:title/
+highlight: pygments
+excerpt_separator: "\n\n"
+exclude: []
+include: ['.htaccess']
 
 
 # # The language setting is used in /includes/header.html for html-settings
-# language: "fr"
+language: "fr"
 
 # # Exclude these files from your production _site
-# exclude:
-#     - Gemfile
-#     - Gemfile.lock
-#     - LICENSE
-#     - README.md
+exclude:
+    - Gemfile
+    - Gemfile.lock
+    - LICENSE
+    - README.md
 
 
 # #
