Modifs mineures de forme

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ slogan: "Journal de mes activités diverses et variés mais aussi des projets pl
 
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: "Journal d'un ancien développeur web, reconvertie dans la QA et présentement en train d'apprendre le japonais."
+description: "Journal d'un ancien développeur web, reconverti dans la QA et présentement en train d'apprendre le japonais."
 
 # This URL is the main adresse. Don't include a slash at the end.
 #
