--- a/_config.yml
+++ b/_config.yml
@@ -57,11 +57,11 @@ urlimg: "http://brice.github.io/images"
 
 
 # # Paginates all X entries
-paginate: 5
+# paginate: 5
 
 
 # Pagination path › Important for blog page in /blog/ to work
-paginate_path: "blog/page:num"
+# paginate_path: "blog/page:num"
 
 
 # Theme works best with Kramdown (using the table of contents function)
